# jsbuilder

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG  README.md  pyproject.toml
.github/workflows/: main.yml
jsbuilder/: __init__.py  builder.py  dataclasses.py
tests/: test_builder.py  test_complex_objects.py  test_json_suites.py  test_native_nodes.py  test_resolver.py  util.py
