[tool.poetry]
name = "jsbuilder"
version = "0.1.0"
description = ""
authors = ["Julian Stier <mail@julian-stier.de>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
jsonschema = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
