[tool.poetry]
name = "jsbuilder"
version = "0.1.0"
description = ""
authors = ["Julian Stier <mail@julian-stier.de>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
jsonschema = "^3.2.0"
black = { version = "^19.10b0", python = "^3.6" }
pre-commit = "^2.3.0"

[tool.isort]
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py", "res/"]
filter_files = true
known_first_party = "pyklopp"
known_third_party = ["cleo", "ignite", "importlib_metadata", "importlib_resources", "jsonschema", "numpy", "pyfakefs", "pytest", "semantic_version", "torch", "torchvision"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | res
  | build
  | dist
  | tests/.*/setup.py
  | tests/json/*
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
